--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -1,53 +1,51 @@
-<div *ngIf="!selectedStatus">
-  <cranix-toolbar></cranix-toolbar>
-  <ion-row class="header-row">
-    <ion-col>
-      <ion-title>{{'Status of the institutes' | translate}}</ion-title>
-    </ion-col>
-  </ion-row>
-  <ion-content *ngIf="!authService.isMD()" id="carded">
-    <ion-card>
-      <ion-card-header>
-        <ion-toolbar>
-          <ion-card-title>{{'Status of the institutes' | translate}}</ion-card-title>
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')"
-              id="quickFilter">
-            </ion-input>
-          </ion-item>
-          <ion-buttons slot="end">
-            <ion-button size="small" (click)="openCollums($event)"
-              matTooltip="{{'Select the columns to show' | translate }}">
-              <ion-icon slot="icon-only" name="apps"></ion-icon>
-            </ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-card-header>
-      <ion-card-content>
-        <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;"
-          class="{{authService.settings.agGridThema}}" rowSelection="multiple"
-          rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
-          [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
-          [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-          (firstDataRendered)="headerHeightSetter()" (columnResized)="headerHeightSetter()"
-          (gridReady)="onGridReady($event)">
-        </ag-grid-angular>
-      </ion-card-content>
-    </ion-card>
-  </ion-content>
-  <ion-content *ngIf="authService.isMD()" fullscreen>
-    <ion-list>
-      <ion-item *ngFor="let object of rowData" button (click)="showStatus(object)">
-        <ion-label>
-          <h3>{{ object.cephalixInstituteId | idToName:'institute' }}</h3>
-        </ion-label>
-        <ion-icon size="small" name="stats-chart" [color]="errorStatus(object)"></ion-icon>
-        <ion-icon size="small" name="save"        [color]="fsStatus(object)"></ion-icon>
-        <ion-icon size="small" name="alarm"       [color]="connectStatus(object)"></ion-icon>
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</div>
+<cranix-toolbar *ngIf="!selectedStatus"></cranix-toolbar>
+<ion-row *ngIf="!selectedStatus" class="header-row">
+  <ion-col>
+    <ion-title>{{'Status of the institutes' | translate}}</ion-title>
+  </ion-col>
+</ion-row>
+<ion-content *ngIf="!authService.isMD() && !selectedStatus" id="carded">
+  <ion-card>
+    <ion-card-header>
+      <ion-toolbar>
+        <ion-card-title>{{'Status of the institutes' | translate}}</ion-card-title>
+        <ion-item>
+          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')"
+            id="quickFilter">
+          </ion-input>
+        </ion-item>
+        <ion-buttons slot="end">
+          <ion-button size="small" (click)="openCollums($event)"
+            matTooltip="{{'Select the columns to show' | translate }}">
+            <ion-icon slot="icon-only" name="apps"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-card-header>
+    <ion-card-content>
+      <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
+        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
+        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+        (firstDataRendered)="headerHeightSetter()" (columnResized)="headerHeightSetter()"
+        (gridReady)="onGridReady($event)">
+      </ag-grid-angular>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
+<ion-content *ngIf="authService.isMD() && !selectedStatus" fullscreen>
+  <ion-list>
+    <ion-item *ngFor="let object of rowData" button (click)="showStatus(object)">
+      <ion-label>
+        <h3>{{ object.cephalixInstituteId | idToName:'institute' }}</h3>
+      </ion-label>
+      <ion-badge [color]="object.availableUpdates == '' ? 'success' : 'danger'">{{object.availableUpdates.split(' ').length -1}}</ion-badge>
+      <ion-icon size="small" name="stats-chart" [color]="errorStatus(object)"></ion-icon>
+      <ion-icon size="small" name="save" [color]="fsStatus(object)"></ion-icon>
+      <ion-icon size="small" name="alarm" [color]="connectStatus(object)"></ion-icon>
+    </ion-item>
+  </ion-list>
+</ion-content>
 <div *ngIf="selectedStatus">
   <ion-header>
     <ion-toolbar>
@@ -75,19 +73,23 @@
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'rootUsage' | translate }}</ion-label>
-        <ion-label [color]="fileSystemError(selectedStatus.rootUsage) ? 'danger' : 'success'">{{ selectedStatus.rootUsage }}</ion-label>
+        <ion-label [color]="fileSystemError(selectedStatus.rootUsage) ? 'danger' : 'success'">{{
+          selectedStatus.rootUsage }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'homeUsage' | translate }}</ion-label>
-        <ion-label [color]="fileSystemError(selectedStatus.homeUsage) ? 'danger' : 'success'">{{ selectedStatus.homeUsage }}</ion-label>
+        <ion-label [color]="fileSystemError(selectedStatus.homeUsage) ? 'danger' : 'success'">{{
+          selectedStatus.homeUsage }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'varUsage' | translate }}</ion-label>
-        <ion-label [color]="fileSystemError(selectedStatus.varUsage) ? 'danger' : 'success'">{{ selectedStatus.varUsage }}</ion-label>
+        <ion-label [color]="fileSystemError(selectedStatus.varUsage) ? 'danger' : 'success'">{{ selectedStatus.varUsage
+          }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'srvUsage' | translate }}</ion-label>
-        <ion-label [color]="fileSystemError(selectedStatus.srvUsage) ? 'danger' : 'success'">{{ selectedStatus.srvUsage }}</ion-label>
+        <ion-label [color]="fileSystemError(selectedStatus.srvUsage) ? 'danger' : 'success'">{{ selectedStatus.srvUsage
+          }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'created' | translate }}</ion-label>
@@ -96,11 +98,11 @@
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ 'availableUpdates' | translate }}</ion-label>
-        <ion-button *ngIf="selectedStatus.availableUpdates.split(' ').length > 0" fill="clear"
+        <ion-button *ngIf="selectedStatus.availableUpdates != ''" fill="clear"
           (click)="redirectToUpdate(selectedStatus.cephalixInstituteId)">
-          <ion-badge color="danger">{{selectedStatus.availableUpdates.split(' ').length }}</ion-badge>
+          <ion-badge color="danger">{{selectedStatus.availableUpdates.split(' ').length -1 }}</ion-badge>
         </ion-button>
-        <ion-label *ngIf="selectedStatus.availableUpdates.split(' ').length == 0">
+        <ion-label *ngIf="selectedStatus.availableUpdates == ''">
           {{ 'No updates' | translate }}
         </ion-label>
         <ion-label>{{ selectedStatus.availableUpdates }}</ion-label>
