#461 "Passwort bei der ersten Anmeldung ändern" standardmäßig abschaltbar Introduce new variable DEFAULT_MUST_CHANGE. Default is yes even if not exists to stay compatible"

--- a/src/app/shared/actions/setpassword/setpassword.component.html
+++ b/src/app/shared/actions/setpassword/setpassword.component.html
@@ -27,7 +27,7 @@
     </ion-item>
     <ion-item *ngIf="!type">
       <ion-label  position="start">{{'mustChange' | translate}}</ion-label>
-      <ion-checkbox position="end" checked="true" [(ngModel)]="setPassword.mustChange" name="mustChange"></ion-checkbox>
+      <ion-checkbox position="end" [(ngModel)]="setPassword.mustChange" name="mustChange"></ion-checkbox>
     </ion-item>
   </ion-list>
 </ion-content>
