--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -1,7 +1,4 @@
-<ion-grid >
-  <!--ion-row class="ion-justify-content-center">
-        <div class="title">CRANIX IONIC</div>
-  </ion-row-->
+<ion-grid>
   <ion-row class="ion-justify-content-center">
     <ion-col>
       <ion-card class="ion-text-center">
@@ -12,20 +9,29 @@
         <ion-card-content>
           <form [formGroup]="authForm" style="padding: 15px;">
             <ion-item>
-              <ion-input *ngIf="allowSavePassword" formControlName="username" type="text" placeholder="{{ 'username' | translate }}" autocomplete="off"></ion-input>
-              <input *ngIf="!allowSavePassword" style="border:0ch" formControlName="username" type="text" placeholder="{{ 'username' | translate }}" autocomplete="off" readonly  onfocus="this.removeAttribute('readonly');">
+              <ion-input *ngIf="allowSavePassword" formControlName="username" type="text"
+                placeholder="{{ 'username' | translate }}" autocomplete="off"></ion-input>
+              <input *ngIf="!allowSavePassword" style="border:0ch" formControlName="username" type="text"
+                placeholder="{{ 'username' | translate }}" autocomplete="off" readonly
+                onfocus="this.removeAttribute('readonly');">
             </ion-item>
 
-            <ion-item lines="none" *ngIf="authForm.controls.username.hasError('required') && authForm.controls.username.touched">
+            <ion-item lines="none"
+              *ngIf="authForm.controls.username.hasError('required') && authForm.controls.username.touched">
               <p class="error-text">{{ 'Sorry, field username is required!' | translate }}</p>
             </ion-item>
 
             <ion-item>
-              <ion-input *ngIf="allowSavePassword" formControlName="password" type="password" placeholder="{{ 'password' | translate }}" autocomplete="off"></ion-input>
-              <input *ngIf="!allowSavePassword" style="border:0ch"  formControlName="password" type="password" placeholder="{{ 'password' | translate }}" autocomplete="off" readonly  onfocus="this.removeAttribute('readonly');">
+              <ion-input *ngIf="allowSavePassword" formControlName="password" [type]="showPassword ? 'text' : 'password'"
+                placeholder="{{ 'password' | translate }}" autocomplete="off"></ion-input>
+              <ion-icon slot="end" [color]="showPassword ? 'primary' : 'medium'" name="eye-off" (click)="showPassword = !showPassword"></ion-icon>
+              <!-- input *ngIf="!allowSavePassword" style="border:0ch" formControlName="password" type="password"
+                placeholder="{{ 'password' | translate }}" autocomplete="off" readonly
+                onfocus="this.removeAttribute('readonly');" -->
             </ion-item>
-            <ion-item lines="none" *ngIf="authForm.controls.password.hasError('required') && authForm.controls.password.touched">
-              <p  class="error-text">{{ 'Sorry, field password is required!' | translate }}</p>
+            <ion-item lines="none"
+              *ngIf="authForm.controls.password.hasError('required') && authForm.controls.password.touched">
+              <p class="error-text">{{ 'Sorry, field password is required!' | translate }}</p>
             </ion-item>
           </form>
         </ion-card-content>
