--- a/src/app/protected/cranix/security/unbound/unbound.component.html
+++ b/src/app/protected/cranix/security/unbound/unbound.component.html
@@ -1,136 +1,130 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-toolbar *ngIf="authService.isMD()">
-  <ion-card-title>{{ 'Manage DNS Filter Configuration' | translate}}</ion-card-title>
-  <ion-buttons slot="end">
-    <ion-button size="small" fill="clear" (click)="writeConfig()" [disabled]="saving"
-      matTooltip="{{'Write the DNS filter configuration and restart the DNS server.' | translate }}">
-      <ion-icon slot="icon-only" color="success" name="checkmark"></ion-icon>
-    </ion-button>
-  </ion-buttons>
-</ion-toolbar>
-<ion-row *ngIf="authService.isMD()">
-  <ion-col>
-    <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
-      <ion-segment-button value="good">
-        <ion-icon name="happy" color="success"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="bad">
-        <ion-icon name="sad" color="danger"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button *ngIf="authService.session.name == 'cephalix'"
-        value="cephalix">
-        <img src="assets/images/logo/cranix_school.svg" width="30">
-      </ion-segment-button>
-      <ion-segment-button value="categories">
-        <ion-icon name="sad" color="danger"></ion-icon>
-      </ion-segment-button>
-    </ion-segment>
-  </ion-col>
-</ion-row>
+<cranix-toolbar title="{{ 'Manage DNS Filter Configuration' | translate}}"></cranix-toolbar>
 <ion-content>
-  <ion-card>
-    <ion-card-header *ngIf="!authService.isMD()">
-      <ion-toolbar>
-        <ion-card-title>{{ 'Manage DNS Filter Configuration' | translate}}</ion-card-title>
-        <ion-buttons slot="end">
-          <ion-button size="small" fill="clear" (click)="writeConfig()" [disabled]="saving"
-            matTooltip="{{'Write the DNS filter configuration and restart the DNS server.' | translate }}">
-            <ion-icon slot="icon-only" color="success" name="checkmark"></ion-icon>
+  <ion-row *ngIf="authService.isMD()">
+    <ion-col>
+      <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
+        <ion-segment-button value="good">
+          <ion-icon name="happy" color="success"></ion-icon>
+        </ion-segment-button>
+        <ion-segment-button value="bad">
+          <ion-icon name="sad" color="danger"></ion-icon>
+        </ion-segment-button>
+        <ion-segment-button *ngIf="authService.session.name == 'cephalix'" value="cephalix">
+          <img src="assets/images/logo/cranix_school.svg" width="30">
+        </ion-segment-button>
+        <ion-segment-button value="categories">
+          <ion-icon name="sad" color="danger"></ion-icon>
+        </ion-segment-button>
+      </ion-segment>
+    </ion-col>
+  </ion-row>
+  <ion-fab *ngIf="authService.isMD()" vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button size="small">
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="end">
+      <ion-fab-button fill="clear" (click)="writeConfig()" [disabled]="saving">
+        <ion-icon name="checkmark" color="success"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngIf="!authService.isMD() || segment=='good'" size="authService.isMD() ? 11 : 4">
+        <ion-list>
+          <ion-item lines="none">
+            <H1>{{'Own White List'|translate}}</H1>
+          </ion-item>
+          <form #addNewDomain1Form="ngForm">
+            <ion-item>
+              <ion-input [(ngModel)]="newDomain1" name="newDomain1"
+                placeholder="{{'Enter a new domain name'| translate}}" pattern="[a-z0-9.-]+\.[a-z]{2,}$">
+              </ion-input>
+              <ion-button fill="clear" slot="end" (click)="addNewDomain1()"
+                [disabled]="!addNewDomain1Form.valid || saving">
+                <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+              </ion-button>
+            </ion-item>
+          </form>
+          <ion-item *ngFor="let dom of whiteList; index as i">
+            <ion-label class="label-max-width">{{dom}}</ion-label>
+            <ion-button fill="clear" slot="end" (click)="deleteDomain1(i)" [disabled]="saving">
+              <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+      <ion-col *ngIf="!authService.isMD() || segment=='bad'" size="authService.isMD() ? 12 : 4">
+        <ion-list>
+          <ion-item lines="none">
+            <H1>{{'Own Black List'|translate}}</H1>
+          </ion-item>
+          <form #addNewDomainForm="ngForm">
+            <ion-item>
+              <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
+                pattern="[a-z0-9.-]+\.[a-z]{2,}$">
+              </ion-input>
+              <ion-button fill="clear" slot="end" (click)="addNewDomain()"
+                [disabled]="!addNewDomainForm.valid || saving">
+                <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+              </ion-button>
+            </ion-item>
+          </form>
+          <ion-item *ngFor="let dom of badList; index as i">
+            <ion-label class="label-max-width">{{dom}}</ion-label>
+            <ion-button fill="clear" slot="end" (click)="deleteDomain(i)" [disabled]="saving">
+              <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+      <ion-col *ngIf="authService.session.name == 'cephalix' && (!authService.isMD() || segment=='cephalix')"
+        size="authService.isMD() ? 12 : 4">
+        <ion-list>
+          <ion-item lines="none">
+            <H2>{{'CEPHALIX List'|translate}}</H2>
+          </ion-item>
+          <form #addNewDomainForm="ngForm">
+            <ion-item>
+              <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
+                pattern="[a-z0-9.-]+\.[a-z]{2,}$">
+              </ion-input>
+              <ion-button fill="clear" slot="end" (click)="addNewDomain()"
+                [disabled]="!addNewDomainForm.valid || saving">
+                <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+              </ion-button>
+            </ion-item>
+          </form>
+          <ion-item *ngFor="let dom of cephalixList; index as i">
+            <ion-label class="label-max-width">{{dom}}</ion-label>
+            <ion-button fill="clear" slot="end" (click)="deleteDomain(i)" [disabled]="saving">
+              <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+      <ion-col *ngIf="!authService.isMD() || segment=='categories'" size="authService.isMD() ? 12 : 4">
+        <ion-list>
+          <ion-item lines="none">
+            <H2>{{'Denied Categories'|translate}}</H2>
+          </ion-item>
+          <div *ngFor="let category of categories">
+            <ion-item>
+              <ion-label matTooltip="{{category.description}}">{{category.desc}}</ion-label>
+              <ion-checkbox slot="end" (ionChange)="togleCategory(category.name)" [disabled]="saving"
+                [checked]="activeUnboundLists.indexOf(category.name) != -1"></ion-checkbox>
+            </ion-item>
+          </div>
+        </ion-list>
+      </ion-col>
+      <ion-col *ngIf="!authService.isMD()">
+        <ion-item lines="none">
+          <ion-button size="small" fill="solid" (click)="writeConfig()" [disabled]="saving"
+            matTooltip="{{'Save DNS-Confiugration and restart'| translate }}">
+            <ion-icon slot="icon-only" name="checkmark" color="success"></ion-icon>
           </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-grid>
-        <ion-row>
-          <ion-col *ngIf="!authService.isMD() || segment=='good'" size="authService.isMD() ? 11 : 4">
-            <ion-list>
-              <ion-item lines="none">
-                <H1>{{'Own White List'|translate}}</H1>
-              </ion-item>
-              <form #addNewDomain1Form="ngForm">
-                <ion-item>
-                  <ion-input [(ngModel)]="newDomain1" name="newDomain1"
-                    placeholder="{{'Enter a new domain name'| translate}}" pattern="[a-z0-9.-]+\.[a-z]{2,}$">
-                  </ion-input>
-                  <ion-button fill="clear" slot="start" (click)="addNewDomain1()"
-                    [disabled]="!addNewDomain1Form.valid || saving">
-                    <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-                  </ion-button>
-                </ion-item>
-              </form>
-              <ion-item *ngFor="let dom of whiteList; index as i">
-                <ion-label class="label-max-width">{{dom}}</ion-label>
-                <ion-button fill="clear" slot="start" (click)="deleteDomain1(i)" [disabled]="saving">
-                  <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
-                </ion-button>
-              </ion-item>
-            </ion-list>
-          </ion-col>
-          <ion-col *ngIf="!authService.isMD() || segment=='bad'" size="authService.isMD() ? 12 : 4">
-            <ion-list>
-              <ion-item lines="none">
-                <H1>{{'Own Black List'|translate}}</H1>
-              </ion-item>
-              <form #addNewDomainForm="ngForm">
-                <ion-item>
-                  <ion-input [(ngModel)]="newDomain" name="newDomain"
-                    placeholder="{{'Enter a new domain name'| translate}}" pattern="[a-z0-9.-]+\.[a-z]{2,}$">
-                  </ion-input>
-                  <ion-button fill="clear" slot="start" (click)="addNewDomain()"
-                    [disabled]="!addNewDomainForm.valid || saving">
-                    <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-                  </ion-button>
-                </ion-item>
-              </form>
-              <ion-item *ngFor="let dom of badList; index as i">
-                <ion-label class="label-max-width">{{dom}}</ion-label>
-                <ion-button fill="clear" slot="start" (click)="deleteDomain(i)" [disabled]="saving">
-                  <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
-                </ion-button>
-              </ion-item>
-            </ion-list>
-          </ion-col>
-          <ion-col *ngIf="authService.session.name == 'cephalix' && (!authService.isMD() || segment=='cephalix')" size="authService.isMD() ? 12 : 4">
-            <ion-list>
-              <ion-item lines="none">
-                <H2>{{'CEPHALIX List'|translate}}</H2>
-              </ion-item>
-              <form #addNewDomainForm="ngForm">
-                <ion-item>
-                  <ion-input [(ngModel)]="newDomain" name="newDomain"
-                    placeholder="{{'Enter a new domain name'| translate}}" pattern="[a-z0-9.-]+\.[a-z]{2,}$">
-                  </ion-input>
-                  <ion-button fill="clear" slot="start" (click)="addNewDomain()"
-                    [disabled]="!addNewDomainForm.valid || saving">
-                    <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-                  </ion-button>
-                </ion-item>
-              </form>
-              <ion-item *ngFor="let dom of cephalixList; index as i">
-                <ion-label class="label-max-width">{{dom}}</ion-label>
-                <ion-button fill="clear" slot="start" (click)="deleteDomain(i)" [disabled]="saving">
-                  <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
-                </ion-button>
-              </ion-item>
-            </ion-list>
-          </ion-col>
-          <ion-col *ngIf="!authService.isMD() || segment=='categories'" size="authService.isMD() ? 12 : 4">
-            <ion-list>
-              <ion-item lines="none">
-                <H2>{{'Denied Categories'|translate}}</H2>
-              </ion-item>
-              <div *ngFor="let category of categories">
-                <ion-item>
-                  <ion-label matTooltip="{{category.description}}">{{category.desc}}</ion-label>
-                  <ion-checkbox slot="start" (ionChange)="togleCategory(category.name)" [disabled]="saving"
-                    [checked]="activeUnboundLists.indexOf(category.name) != -1"></ion-checkbox>
-                </ion-item>
-              </div>
-            </ion-list>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-content>
-  </ion-card>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
