--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -79,7 +79,7 @@
     <ion-item-sliding *ngFor="let object of rowData">
       <ion-item [color]="regcodeValid(object)" button  (click)="redirectToEdit(object)">
         <ion-note slot="start">
-          <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
         <ion-label [color]="regcodeValid(object)" >
           <h3>{{ object.name }}</h3>
@@ -91,18 +91,18 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-button fill="clear" (click)="redirectToDelete(object)">
-          <ion-icon color="danger" name="trash-outline"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="redirectToEdit(object)">
-          <ion-icon name="build-sharp"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="openActions($event,object)">
-          <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
-        </ion-button>
-        <ion-button *ngIf="object.ipVPN && object.ipVN != ''" color="secondary" fill="clear" size="small"  (click)="routeInstitute(object)">
-          <ion-icon name="create-outline" style="height:15px;width:15px"></ion-icon>
-        </ion-button>
+        <ion-item-option color="danger" (click)="redirectToDelete(object)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="redirectToEdit(object)">
+          <ion-icon slot="icon-only" name="build-sharp"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="openActions($event,object)">
+          <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+        </ion-item-option>
+        <ion-item-option *ngIf="object.ipVPN && object.ipVN != ''" color="secondary" (click)="routeInstitute(object)">
+          <ion-icon slot="icon-only" name="create-outline" style="height:15px;width:15px"></ion-icon>
+        </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
