--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -72,7 +72,7 @@
     <ion-item-sliding *ngFor="let object of rowData">
       <ion-item button (click)="redirectToEdit(object)">
         <ion-note slot="start">
-          <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
         <ion-label>
           <h3>{{ object.name }}</h3>
@@ -83,12 +83,12 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-button fill="clear" (click)="redirectToDelete(object)">
-          <ion-icon color="danger" name="trash-outline"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="reset(object.id)">
-          <ion-icon name="refresh"></ion-icon>
-        </ion-button>
+        <ion-ion-option color="danger" (click)="redirectToDelete(object)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-ion-option>
+        <ion-ion-option fill="clear" (click)="reset(object.id)">
+          <ion-icon slot="icon-only" name="refresh"></ion-icon>
+        </ion-ion-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
