--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -67,7 +67,7 @@
     <ion-item-sliding *ngFor="let object of rowData">
       <ion-item button (click)="redirectToEdit(object)">
         <ion-note slot="start">
-          <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
         <ion-label>
           <h3>{{ object.name }}</h3>
@@ -78,12 +78,12 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-button fill="clear" (click)="redirectToDelete(object)">
-          <ion-icon color="danger" name="trash-outline"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="redirectToMembers(object)">
-          <ion-icon name="people-circle"></ion-icon>
-        </ion-button>
+        <ion-item-option color="danger" (click)="redirectToDelete(object)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="redirectToMembers(object)">
+          <ion-icon slot="icon-only" name="people-circle"></ion-icon>
+        </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
