--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -1,9 +1,4 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{ 'Manage firewall configuration' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
+<cranix-toolbar title="{{'Manage firewall configuration' | translate}}"></cranix-toolbar>
 <ion-row *ngIf="authService.isMD()">
   <ion-col>
     <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
@@ -51,7 +46,6 @@
   <ion-card>
     <ion-card-header *ngIf="!authService.isMD()">
       <ion-toolbar>
-        <ion-card-title>{{ 'Manage firewall configuration' | translate}}</ion-card-title>
         <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
           <ion-segment-button value="in" layout="icon-start">
             <ion-label>{{'Incoming rules' | translate}}</ion-label>
