--- a/src/app/protected/cranix/security/security.page.html
+++ b/src/app/protected/cranix/security/security.page.html
@@ -1,5 +1,5 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row"></ion-row>
+<!-- cranix-toolbar></cranix-toolbar>
+<ion-row class="header-row"></ion-row -->
 <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="access">
@@ -20,6 +20,11 @@
       <ion-tab-button *ngIf="authS.isAllowed('system.unbound')" tab="unbound">
         <ion-icon name="globe-outline"></ion-icon>
         <ion-label>{{ 'DNS-Filter' | translate}}</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button *ngIf="authS.isAllowed('system.unbound')" tab="access-log">
+        <ion-icon name="receipt-outline"></ion-icon>
+        <ion-label>{{ 'Access log' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
