--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -70,7 +70,7 @@
     <ion-item-sliding *ngFor="let object of rowData">
       <ion-item button (click)="redirectToEdit(object)">
         <ion-note slot="start">
-          <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
         <ion-label>
           <h3>{{ object.uid }}</h3>
@@ -82,15 +82,15 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-button fill="clear" (click)="redirectToDelete(object)">
-          <ion-icon color="danger" name="trash-outline"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="redirectToGroups(object)">
-          <ion-icon name="people"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="openActions($event,object)">
-          <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
-        </ion-button>
+        <ion-item-option color="danger" (click)="redirectToDelete(object)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="redirectToGroups(object)">
+          <ion-icon slot="icon-only" name="people"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="openActions($event,object)">
+          <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+        </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
