--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -1,20 +1,51 @@
 <cranix-toolbar title="{{'Manage firewall configuration' | translate}}"></cranix-toolbar>
-<ion-row *ngIf="authService.isMD()">
-  <ion-col>
-    <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
-      <ion-segment-button value="in" layout="icon-start">
-        <ion-icon name="log-in"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="out" layout="icon-end">
-        <ion-icon name="log-out"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="remote" layout="icon-start">
-        <ion-icon name="shuffle"></ion-icon>
-      </ion-segment-button>
-    </ion-segment>
-  </ion-col>
-</ion-row>
-<ion-content id="carded">
+<ion-toolbar>
+  <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
+    <ion-segment-button value="in" layout="icon-start">
+      <ion-label *ngIf="!authService.isMD()">{{'Incoming rules' | translate}}</ion-label>
+      <ion-icon name="log-in"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button value="out" layout="icon-end">
+      <ion-label *ngIf="!authService.isMD()">{{'Outgoing rules' | translate}}</ion-label>
+      <ion-icon name="log-out"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button value="remote" layout="icon-start">
+      <ion-label *ngIf="!authService.isMD()">{{'Remote access' | translate}}</ion-label>
+      <ion-icon name="shuffle"></ion-icon>
+    </ion-segment-button>
+  </ion-segment>
+  <ion-buttons *ngIf="!authService.isMD()" slot="end">
+    <ion-button *ngIf="segment == 'in'" size="small" fill="solid" (click)="securityService.setIncommingRules()"
+      matTooltip="{{'Apply changes' | translate }}">
+      <ion-icon slot="icon-only" name="checkmark" color="success"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="segment == 'out'" size="small" fill="solid" (click)="addOutgoinRule()"
+      matTooltip="{{'Add outgoing rule' | translate }}">
+      <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="segment == 'out'" size="small" fill="solid" (click)="deleteOutgoinRule()"
+      matTooltip="{{'Delete selected outgoing rule' | translate }}">
+      <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="segment == 'remote'" size="small" fill="solid" (click)="addRemoteRule()"
+      matTooltip="{{'Add remote access rule' | translate }}">
+      <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="segment == 'remote'" size="small" fill="solid" (click)="deleteRemoteRule()"
+      matTooltip="{{'Delete selected remote access rule' | translate }}">
+      <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
+    </ion-button>
+    <ion-button size="small" (click)="securityService.setFirewallStatus('restart')" fill="solid"
+      matTooltip="{{'Restart firewall' | translate }}">
+      <ion-icon slot="icon-only" name="arrow-redo" color="tertiary"></ion-icon>
+    </ion-button>
+    <ion-button size="small" (click)="securityService.setFirewallStatus('stop')" fill="solid"
+      matTooltip="{{'Stop firewall' | translate }}">
+      <ion-icon slot="icon-only" name="close" color="danger"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+</ion-toolbar>
+<ion-content>
   <ion-fab *ngIf="authService.isMD()" vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size="small">
       <ion-icon name="arrow-forward-circle"></ion-icon>
@@ -43,209 +74,134 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-card>
-    <ion-card-header *ngIf="!authService.isMD()">
-      <ion-toolbar>
-        <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
-          <ion-segment-button value="in" layout="icon-start">
-            <ion-label>{{'Incoming rules' | translate}}</ion-label>
-            <ion-icon name="log-in"></ion-icon>
-          </ion-segment-button>
-          <ion-segment-button value="out" layout="icon-end">
-            <ion-label>{{'Outgoing rules' | translate}}</ion-label>
-            <ion-icon name="log-out"></ion-icon>
-          </ion-segment-button>
-          <ion-segment-button value="remote" layout="icon-start">
-            <ion-label>{{'Remote access' | translate}}</ion-label>
-            <ion-icon name="shuffle"></ion-icon>
-          </ion-segment-button>
-        </ion-segment>
-        <ion-buttons slot="end">
-          <ion-button *ngIf="segment == 'in'" size="small" fill="solid" (click)="securityService.setIncommingRules()()"
-            matTooltip="{{'Apply changes' | translate }}">
-            <ion-icon slot="icon-only" name="checkmark" color="success"></ion-icon>
-          </ion-button>
-          <ion-button *ngIf="segment == 'out'" size="small" fill="solid" (click)="addOutgoinRule()"
-            matTooltip="{{'Add outgoing rule' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-          </ion-button>
-          <ion-button *ngIf="segment == 'out'" size="small" fill="solid" (click)="deleteOutgoinRule()"
-            matTooltip="{{'Delete selected outgoing rule' | translate }}">
-            <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
-          </ion-button>
-          <ion-button *ngIf="segment == 'remote'" size="small" fill="solid" (click)="addRemoteRule()"
-            matTooltip="{{'Add remote access rule' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-          </ion-button>
-          <ion-button *ngIf="segment == 'remote'" size="small" fill="solid" (click)="deleteRemoteRule()"
-            matTooltip="{{'Delete selected remote access rule' | translate }}">
-            <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
-          </ion-button>
-          <ion-button size="small" (click)="securityService.setFirewallStatus('restart')" fill="solid"
-            matTooltip="{{'Restart firewall' | translate }}">
-            <ion-icon slot="icon-only" name="arrow-redo" color="tertiary"></ion-icon>
-          </ion-button>
-          <ion-button size="small" (click)="securityService.setFirewallStatus('stop')" fill="solid"
-            matTooltip="{{'Stop firewall' | translate }}">
-            <ion-icon slot="icon-only" name="close" color="danger"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-label *ngIf="segment == 'in' && !securityService.incomingRules">
-        {{ 'Loading data ...' | translate}}
-      </ion-label>
-      <ion-grid *ngIf="segment == 'in' && securityService.incomingRules">
-        <ion-row>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item>
-              <ion-label>{{ 'ssh access' | translate }}</ion-label>
-            </ion-item>
-          </ion-col>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item lines="none">
-              <ion-checkbox slot="start" color="secondary" checked="{{securityService.incomingRules.ssh}}"
-                id="incoming-ssh" (ionChange)="incomingChanged()">
-              </ion-checkbox>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item>
-              <ion-label>{{'admin access' | translate}}</ion-label>
-            </ion-item>
-          </ion-col>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item lines="none">
-              <ion-checkbox slot="start" color="secondary" checked="{{securityService.incomingRules.admin}}"
-                id="incoming-admin" (ionChange)="incomingChanged()">
-              </ion-checkbox>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item>
-              <ion-label>{{'https access' | translate}}</ion-label>
-            </ion-item>
-          </ion-col>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item lines="none">
-              <ion-checkbox slot="start" color="secondary" checked="{{securityService.incomingRules.https}}"
-                id="incoming-https" (ionChange)="incomingChanged()">
-              </ion-checkbox>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item>
-              <ion-label>{{'rdesktop access' | translate}}</ion-label>
-            </ion-item>
-          </ion-col>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item lines="none">
-              <ion-checkbox slot="start" color="secondary" checked="{{securityService.incomingRules.rdesktop}}"
-                id="incoming-rdesktop" (ionChange)="incomingChanged()">
-              </ion-checkbox>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size=2 size-xs=6 size-sm=6 size-md=6>
-            <ion-item>
-              <ion-label>{{'open other ports' | translate}}</ion-label>
-            </ion-item>
-          </ion-col>
-          <ion-col size=10 size-xs=6 size-sm=6 size-md=6>
-            <ion-item>
-              <ion-input type="text" value="{{securityService.incomingRules.other}}" id="incoming-other"
-                (ionChange)="incomingChanged()">
-              </ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-      <div *ngIf="!authService.isMD()">
-        <ag-grid-angular *ngIf="segment == 'out'" style="width: 100%; height: 100%;"
-          class="{{authService.settings.agGridThema}}" [rowData]="securityService.outgoingRules"
-          [columnDefs]="outColumnDefs" [defaultColDef]="defaultColDef" [context]="context" rowSelection="multiple"
-          [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="outGridReady($event)"
-          (selectionChanged)="outSelectionChanged()" id="outGridTable">
-        </ag-grid-angular>
-        <ag-grid-angular *ngIf="segment == 'remote'" style="width: 100%; height: 100%;"
-          class="{{authService.settings.agGridThema}}" [rowData]="securityService.remoteRules"
-          [columnDefs]="remoteColumnDefs" [context]="context" rowSelection="multiple"
-          [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="remoteGridReady($event)"
-          (selectionChanged)="remoteSelectionChanged()" id="remoteGridTable">
-        </ag-grid-angular>
-      </div>
-      <div *ngIf="authService.isMD()">
-        <ion-grid *ngIf="segment == 'out'">
-          <ion-row style="background-color : {{authService.rowColors[2]}}">
-            <ion-col size=4>
-              {{ 'name' | translate}}
-            </ion-col>
-            <ion-col size=2>
-              {{ 'type' | translate}}
-            </ion-col>
-            <ion-col size=2>
-              {{ 'dest' | translate}}
-            </ion-col>
-            <ion-col size=2>
-              {{ 'prot' | translate}}
-            </ion-col>
-            <ion-col size=2>
-              {{ 'port' | translate}}
-            </ion-col>
-          </ion-row>
-          <ion-row *ngFor="let obj of securityService.outgoingRules; index as i"
-            style="background-color : {{authService.rowColors[i%2]}}">
-            <ion-col size=4>
-              {{ obj.name }}
-            </ion-col>
-            <ion-col size=2>
-              {{ obj.type }}
-            </ion-col>
-            <ion-col size=2>
-              {{ obj.dest }}
-            </ion-col>
-            <ion-col size=2>
-              {{ obj.prot }}
-            </ion-col>
-            <ion-col size=2>
-              {{ obj.port }}
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-        <ion-grid *ngIf="segment == 'remote'">
-          <ion-row style="background-color : {{authService.rowColors[2]}}">
-            <ion-col>
-              {{ 'name' | translate}}
-            </ion-col>
-            <ion-col>
-              {{ 'ext' | translate}}
-            </ion-col>
-            <ion-col>
-              {{ 'port' | translate}}
-            </ion-col>
-          </ion-row>
-          <ion-row *ngFor="let obj of securityService.remoteRules; index as i"
-            style="background-color : {{authService.rowColors[i%2]}}">
-            <ion-col>
-              {{ obj.name }}
-            </ion-col>
-            <ion-col>
-              {{ obj.ext }}
-            </ion-col>
-            <ion-col>
-              {{ obj.port }}
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </div>
-    </ion-card-content>
-  </ion-card>
+  <ion-label *ngIf="segment == 'in' && !securityService.incomingRules">
+    {{ 'Loading data ...' | translate}}
+  </ion-label>
+  <ion-grid *ngIf="segment == 'in' && securityService.incomingRules">
+    <ion-row>
+      <ion-col size=6>
+        <ion-list-header>
+          <ion-label>{{ 'Services' | translate }}</ion-label>
+        </ion-list-header>
+        <ion-list>
+          <ion-item>
+            <ion-select type="text" [(ngModel)]="newService" name="newService" placeholder="{{ 'Select a new service' | translate }}">
+              <ion-select-option *ngFor="let service of securityService.firewallServices" value="{{service}}">{{ service
+                }}</ion-select-option>
+            </ion-select>
+            <ion-button fill="clear" (click)="addIncomingService()">
+              <ion-icon name="add-circle" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-item>
+          <ion-item *ngFor="let item of securityService.incomingRules.services">
+            <ion-label>
+              {{ item }}
+            </ion-label>
+            <ion-button fill="clear" (click)="removeIncomingService(item)">
+              <ion-icon color="danger" name="trash" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+      <ion-col size=6>
+        <ion-list-header>
+          <ion-label>{{ 'Ports' | translate }}</ion-label>
+        </ion-list-header>
+        <ion-list>
+          <ion-item>
+            <ion-input placeholder="port/protocol" [(ngModel)]="newPort" name="newPort"></ion-input>
+            <ion-button fill="clear" (click)="addIncomingPort()">
+              <ion-icon name="add-circle" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-item>
+          <ion-item *ngFor="let item of securityService.incomingRules.ports">
+            <ion-label>
+              {{ item }}
+            </ion-label>
+            <ion-button fill="clear" (click)="removeIncomingPort(item)">
+              <ion-icon color="danger" name="trash" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <div *ngIf="!authService.isMD()">
+    <ag-grid-angular *ngIf="segment == 'out'" style="width: 100%; height: 100%;"
+      class="{{authService.settings.agGridThema}}" [rowData]="securityService.outgoingRules"
+      [columnDefs]="outColumnDefs" [defaultColDef]="defaultColDef" [context]="context" rowSelection="multiple"
+      [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="outGridReady($event)"
+      (selectionChanged)="outSelectionChanged()" id="outGridTable">
+    </ag-grid-angular>
+    <ag-grid-angular *ngIf="segment == 'remote'" style="width: 100%; height: 100%;"
+      class="{{authService.settings.agGridThema}}" [rowData]="securityService.remoteRules"
+      [columnDefs]="remoteColumnDefs" [context]="context" rowSelection="multiple"
+      [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="remoteGridReady($event)"
+      (selectionChanged)="remoteSelectionChanged()" id="remoteGridTable">
+    </ag-grid-angular>
+  </div>
+  <div *ngIf="authService.isMD()">
+    <ion-grid *ngIf="segment == 'out'">
+      <ion-row style="background-color : {{authService.rowColors[2]}}">
+        <ion-col size=4>
+          {{ 'name' | translate}}
+        </ion-col>
+        <ion-col size=2>
+          {{ 'type' | translate}}
+        </ion-col>
+        <ion-col size=2>
+          {{ 'dest' | translate}}
+        </ion-col>
+        <ion-col size=2>
+          {{ 'prot' | translate}}
+        </ion-col>
+        <ion-col size=2>
+          {{ 'port' | translate}}
+        </ion-col>
+      </ion-row>
+      <ion-row *ngFor="let obj of securityService.outgoingRules; index as i"
+        style="background-color : {{authService.rowColors[i%2]}}">
+        <ion-col size=4>
+          {{ obj.name }}
+        </ion-col>
+        <ion-col size=2>
+          {{ obj.type }}
+        </ion-col>
+        <ion-col size=2>
+          {{ obj.dest }}
+        </ion-col>
+        <ion-col size=2>
+          {{ obj.protocol }}
+        </ion-col>
+        <ion-col size=2>
+          {{ obj.port }}
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-grid *ngIf="segment == 'remote'">
+      <ion-row style="background-color : {{authService.rowColors[2]}}">
+        <ion-col>
+          {{ 'name' | translate}}
+        </ion-col>
+        <ion-col>
+          {{ 'ext' | translate}}
+        </ion-col>
+        <ion-col>
+          {{ 'port' | translate}}
+        </ion-col>
+      </ion-row>
+      <ion-row *ngFor="let obj of securityService.remoteRules; index as i"
+        style="background-color : {{authService.rowColors[i%2]}}">
+        <ion-col>
+          {{ obj.name }}
+        </ion-col>
+        <ion-col>
+          {{ obj.ext }}
+        </ion-col>
+        <ion-col>
+          {{ obj.port }}
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
