--- a/src/app/protected/cranix/system/status/system-status.component.html
+++ b/src/app/protected/cranix/system/status/system-status.component.html
@@ -1,10 +1,5 @@
-<cranix-toolbar></cranix-toolbar>
+<cranix-toolbar title="{{'System status' | translate}}"></cranix-toolbar>
 <ion-content id="carded">
-  <ion-row class="header-row">
-    <ion-col>
-      <ion-title>{{'System status' | translate}}</ion-title>
-    </ion-col>
-  </ion-row>
   <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
     <ion-fab-button>
       <ion-icon name="arrow-forward-circle"></ion-icon>
@@ -24,37 +19,36 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>{{'System status' | translate}}</ion-card-title>
-      <ion-toolbar>
-        <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="support($event)" matTooltip="{{'Add support' | translate }}">
-            <ion-icon slot="icon-only" name="help-circle"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="update($event)"
-            matTooltip="{{'Update the server.' | translate }}">
-            <ion-icon slot="icon-only" name="trending-up" color="tertiary"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="restart($event)"
-            matTooltip="{{'Restart the server.' | translate }}">
-            <ion-icon slot="icon-only" name="arrow-redo" color="tertiary"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="shutDown($event)"
-            matTooltip="{{'Shut down the server.' | translate }}">
-            <ion-icon slot="icon-only" color="danger" name="power"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-content>
-      <ion-grid *ngIf="systemStatus">
-        <ion-row>
-          <ion-col *ngFor="let key of objectKeys">
-            <ag-charts-angular style="height: 200px" [options]="systemStatus[key]"></ag-charts-angular>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-content>
-  </ion-card>
+  <ion-toolbar *ngIf="!authService.isMD()">
+    <ion-buttons slot="end">
+      <ion-button size="small" fill="solid" (click)="support($event)" matTooltip="{{'Add support' | translate }}">
+        <ion-icon slot="icon-only" name="help-circle"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="update($event)" matTooltip="{{'Update the server.' | translate }}">
+        <ion-icon slot="icon-only" name="trending-up" color="tertiary"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="restart($event)"
+        matTooltip="{{'Restart the server.' | translate }}">
+        <ion-icon slot="icon-only" name="arrow-redo" color="tertiary"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="shutDown($event)"
+        matTooltip="{{'Shut down the server.' | translate }}">
+        <ion-icon slot="icon-only" color="danger" name="power"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-grid *ngIf="systemStatus">
+    <ion-row>
+      <ion-col *ngFor="let key of objectKeys">
+        <ion-card>
+          <ion-card-header>
+            <ion-title>{{ systemStatus[key]["header"] }}</ion-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ag-charts-angular style="height: 270px" [options]="systemStatus[key]"></ag-charts-angular>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
